--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ footer {
   border: 1px solid #767e9e;
   border-radius: 10px;
   box-shadow: 5px 4px #00000017;
+  background-color: #ffffff;
 }
 
 .article-icon img {
