--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,13 @@ li.nav-item:last-child::after {
   border: 1px solid #767e9e;
 }
 
+.detailed-info {
+  display: flex;
+  padding: 20px 0;
+  border-top: 1px solid #2d303abf;
+}
+
+
 /* Services */
 
 .services {
@@ -125,7 +132,7 @@ li.nav-item:last-child::after {
 .service-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 0 100px;
 }
 
@@ -210,6 +217,11 @@ footer {
   background-color: #ffffff;
 }
 
+.article-icon {
+  display: flex;
+  justify-content: center;
+}
+
 .article-icon img {
   height: 200px;
 }
@@ -222,6 +234,15 @@ footer {
 .service-description a:hover,
 .contact-details h4 a:hover {
   color: #9a9a9a8c;
+}
+
+.video-frame {
+  width: 1100px;
+  display: flex;
+}
+
+.video {
+  margin: 20px;
 }
 
 /* Contacts */
@@ -239,7 +260,7 @@ footer {
 }
 
 .photo {
-  margin-right: 50px;
+  margin: 25px 25px 0 0;
 }
 
 .photo img {
@@ -338,7 +359,7 @@ footer {
   background-color: #f2f2f2;
   padding: 20px 30px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 @keyframes openclose {
